--- a/_posts/2019-07-07-the-us-narrative-today.html
+++ b/_posts/2019-07-07-the-us-narrative-today.html
@@ -2495,107 +2495,108 @@ stories:
   domain: http://www.djournal.com/
   link: https://www.djournal.com/yelich-de-cerveceros-dice-no-a-festival-de-cuadrangulares/image_14571f03-2f5c-5475-bbe5-dc1f8157f029.html
 images:
-- name: mistywoods-babyfoot-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-gred-mash.jpg
-- name: bluelake-gred-mash-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gred-mash-file-00-00-00-00.jpg
-- name: mistywoods-babyfoot-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-kand-two.jpg
-- name: udnie-DSC_0109.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0109.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-crafty-painting.jpg
-- name: hollywood-building-hollywood-building-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-mucha-mult.jpg
-- name: oldhousecars-house-old-cars-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-dark-soul.jpg
-- name: art-museum-art-museum-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-hot-spicy.jpg
-- name: old-granary-field-granaryfield-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-nazi-poster.jpg
-- name: liberty-back-statue-liberty-back-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-rainbow-festival.jpg
-- name: sand-hand-sand-hand-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-dry-skin.jpg
-- name: oldtrain-oldtrain-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-ww2-dresden.jpg
-- name: flower-barbed-wire-flower-barbed-wire-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-green-zuma.jpg
-- name: oldsmallboat-oldsmallboat-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-emily-carr.jpg
-- name: oldroad-old-road-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-rainbow-festival.jpg
-- name: nazi-invasion-DSC_0036.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0036.jpg
-- name: containership-containership-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-purple-pond.jpg
-- name: oldhousecars-house-old-cars-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-dark-dali.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-blue-electricity.jpg
-- name: oldcabin-store-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-yellow-collage.jpg
-- name: window-window-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-sunday.jpg
-- name: wind-mills-windmills-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-dali-two.jpg
-- name: containership-containership-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dry-skin.jpg
-- name: carry-load-carryload-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-green-zuma.jpg
-- name: art-museum-art-museum-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-constitution.jpg
-- name: flower-barbed-wire-flower-barbed-wire-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-kand-two.jpg
-- name: white-house-lawn-white-house-window-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-internet-numbers.jpg
-- name: blossombar-deep-connections-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-deep-connections-file-00-00-00-00.jpg
-- name: locked-up-steam-lock-up-steam-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-sand-paper.jpg
-- name: death-valley-death-valley-national-park-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-oily-mcoilface.jpg
-- name: abe-lincoln-one-smooth-ride-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-smooth-ride-file-00-00-00-00.jpg
-- name: aws-s3-square-file-00-00-24-99-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-file-00-00-24-99-square.jpg
-- name: border-fence-border-fence-on-hill-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-colorful-blocks.jpg
-- name: old-school-house-old-schoolhouse-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-monet-one.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-sand-paper.jpg
-- name: downtheline-downtheline-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-dark-rain.jpg
-- name: oldhousecars-house-old-cars-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-matrix.jpg
-- name: old-cabin-oldcabin-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-internet-numbers.jpg
-- name: hollywood-building-hollywood-building-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-pablo-blue.jpg
-- name: blossombar-colorful-dream-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-colorful-dream-file-00-00-50-62.jpg
-- name: oldroad-old-road-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dry-skin.jpg
-- name: store-on-corner-store-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-alien-goggles.jpg
-- name: castle-wall-DSC-0067-kandinsky-bv.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-kandinsky-bv.JPG
-- name: razorcliff-razorcliff-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-crafty-painting.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-sand-paper.jpg
-- name: beach-rocks-beach-rocks-currents-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-nazi-poster.jpg
-- name: schoolhouse-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/schoolhouse-dark-dali.jpg
-- name: trucksilo-trucksilo-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-atari-missle.jpg
-- name: dc-statue-dcstatue-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-crabapple.jpg
-- name: old-barn-old-barn-1500-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-crunch-paper.jpg
-- name: nazi-invasion-IMG_8353.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_8353.jpg
+- name: border-crossing-bordercrossing-sunday.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-sunday.png
+- name: dragon-desert-desert-dragon-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-free-woman.jpg
+- name: border-fence-border-fence-on-hill-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-smoking-cigarette.jpg
+- name: oldhotel-oldhotel-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-wols.jpg
+- name: gypsy-wagon-gypsywagon-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-aqua.jpg
+- name: yuma-bank-yuma-bak-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-blue-granite.jpg
+- name: mosaic-face-mosaic-face-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-emily-carr.jpg
+- name: fence-fence-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-monet-one.jpg
+- name: art-museum-art-museum-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-colorful-dream.jpg
+- name: old-granary-field-oldhouse-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-purp-paper.jpg
+- name: windowmountain-window-mountain-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-crunch-paper.jpg
+- name: school-clouds-church-clouds-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-copper-circuit.jpg
+- name: rockingchair-rockingchair-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-colored-circuits.jpg
+- name: nazi-invasion-IMG_7054.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7054.jpg
+- name: oldbarn-oldbarn-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-really-hot.jpg
+- name: trucksilo-trucksilo-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-really-hot.jpg
+- name: legal-statue-legalstatue-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-bright-sand.jpg
+- name: status-berlin-status-berlin-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-dark-dali.jpg
+- name: power-lines-power-lines-empty-space-copper-circuit copy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-copper-circuit
+    copy.jpg
+- name: birdhouse-birdhouse-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-satan-red.jpg
+- name: lincoln-memorial-lincolnmemorial-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-cinnamon-rolls.jpg
+- name: sand-hand-sand-hand-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-copper-circuit-2.jpg
+- name: old-church-oldchurch-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-atari-asteroids.jpg
+- name: old-gas-pumps-oldgaspumps-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-smoking-cigarette.jpg
+- name: beach-rocks-beach-rocks-currents-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-satan-red.jpg
+- name: long-factory-uncle-sam.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/long-factory-uncle-sam.jpg
+- name: stories-statue-face-open-mouth-colorful-blocks.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-statue-face-open-mouth-colorful-blocks.png
+- name: powerlines-power-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-matrix.jpg
+- name: old-door-lock-old-door-lock-2-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-crunch-paper.jpg
+- name: crow_far_away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_far_away.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-emily-carr.jpg
+- name: downtown-los-angeles-downtown-la-green-zuma.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-green-zuma.JPG
+- name: paris-paris-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-space-pizza.jpg
+- name: gears-4882162452-fa3126b38d-b-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-sunday.jpg
+- name: machine-road-machine-road-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-yellow-collage.jpg
+- name: oldhousecars-house-old-cars-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-dry-skin.jpg
+- name: downtown-trucksilo-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-satan-red.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-oily-mcoilface.jpg
+- name: status-berlin-status-berlin-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-rainbow-festival.jpg
+- name: aws-s3-stories-new-64-185-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-64-185-800-500-0-max-0-1--1.jpg
+- name: curtain-curtain-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-colorful-blocks.jpg
+- name: locked-up-steam-lock-up-steam-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-purp-paper.jpg
+- name: windowmountain-window-mountain-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-crabapple.jpg
+- name: oldbarn-oldbarn-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-blue-circuit.jpg
+- name: old-granary-field-granaryfield-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-clean-view.jpg
+- name: christianity-christianity-under-construction.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction.jpg
+- name: desert-dragon-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/desert-dragon-light-dali.jpg
+- name: store-on-corner-oldcabin-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dali-two.jpg
+- name: abandonedbuildings_wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_wols.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-atari-missle.jpg
+- name: two-sattelite-dishes-norman-rockwell-ruby-bridges.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/two-sattelite-dishes-norman-rockwell-ruby-bridges.jpg
 ---
 Zoo Vandals Let Bobcat, Raccoon Briefly Escape, Police Say.&nbsp;High Costs Slow Use Of Body Cameras.&nbsp;Georgia Track And Field Athletes Have Strong Showings At National Summer Events.&nbsp;Man Suffers Significant Injuries In Fall At Quarry.&nbsp;Massive Choir A Place For Estonians To Find Identity, Solace.&nbsp;Accused Burglar Offers Homeowner Meth Hit.&nbsp;Hattiloos Bandele Awarded Grant For Play On Confederate Statue Removals.&nbsp;Movie In The Park Soda Springs On July 15th.&nbsp;
