--- a/_posts/2019-07-07-the-us-narrative-today.html
+++ b/_posts/2019-07-07-the-us-narrative-today.html
@@ -2517,5 +2517,108 @@ stories:
   state: Utah
   domain: http://www.standard.net/
   link: https://www.standard.net/lifestyle/faith/utah-temple-worker-s-hairstyle-opens-bigger-discussion-on-diversity/article_e28334db-e9bb-5462-89b9-c051488a4531.html
+images:
+- name: curtain-curtain-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-pablo-blue.jpg
+- name: death-valley-death-valley-national-park-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-internet-numbers.jpg
+- name: locked-up-steam-lock-up-steam-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-atari-missle.jpg
+- name: status-berlin-status-berlin-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-plentiful.jpg
+- name: old-barn-old-barn-1500-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-internet-numbers.jpg
+- name: school-clouds-church-clouds-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-crunch-paper.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-cinnamon-rolls.jpg
+- name: stories-fence-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-fence-crabapple.jpg
+- name: docks-docks-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-dali-two.jpg
+- name: stories-beach-rocks-currents-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-beach-rocks-currents-blue-circuit-5.jpg
+- name: yosemite-yosemite-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-satan-red.jpg
+- name: server-racks-door-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door-internet-numbers.jpg
+- name: old-church-oldchurch-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-dry-skin.jpg
+- name: white-house-lawn-white-house-lawn-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-dark-soul.jpg
+- name: bluelake-crafty-painting-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-crafty-painting-file-00-01-17-38.jpg
+- name: server-racks-clouds-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-clouds-smooth-ride.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-gred-mash.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-gred-mash.JPG
+- name: birdhouse-birdhouse-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-plentiful.jpg
+- name: downtown-trucksilo-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-really-hot.jpg
+- name: abe-lincoln-one-purple-storm-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purple-storm-file-00-00-15-87.jpg
+- name: beach-clouds-lifeguard-beachclouds-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-blue-brush.jpg
+- name: downtheline-downtheline-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-kandinsky-bv.jpg
+- name: oldhouse-oldhouse-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-space-pizza.jpg
+- name: carry-load-carryload-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-smooth-ride.jpg
+- name: birdhouse-birdhouse-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-light-dali.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-deep-connections.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-deep-connections.png
+- name: abe-lincoln-one-pablo-blue-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-pablo-blue-file-00-00-15-87.jpg
+- name: ellis-island-ellisisland-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-yellow-paper.jpg
+- name: white-house-lawn-white-house-window-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-smoking-cigarette.jpg
+- name: birdhouse-birdhouse-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-marcel-duchamp.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-sunday.jpg
+- name: status-berlin-status-berlin-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-gred-mash.jpg
+- name: wind-mills-windmills.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills.jpg
+- name: stories-36575484422-087495fca9-z.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-36575484422-087495fca9-z.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-oily-mcoilface.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-oily-mcoilface.JPG
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-rainbow-festival.jpg
+- name: downtown-trucksilo-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-monet-one.jpg
+- name: store-on-corner-oldcabin-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-atari-asteroids.jpg
+- name: old-gas-pumps-oldgaspumps-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-sand-paper.jpg
+- name: catacombs-catacombs-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-umberto-bocc.jpg
+- name: crow_ww2_color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_ww2_color.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-neo-instinct.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-neo-instinct.JPG
+- name: ellis-island-ellis-island-room-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-internet-numbers.jpg
+- name: christianity-christianity-under-construction-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-smoking-cigarette.jpg
+- name: supreme-court-supremecourt-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-free-woman.jpg
+- name: gypsymosaic-gypsy-eyes-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-post-modern.jpg
+- name: bordercrossing-bordercrossing-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-dark-soul.jpg
+- name: white-house-lawn-white-house-window-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-blue-brush.jpg
+- name: old-barn-old-barn-1500-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-purple-storm.jpg
+- name: server-cloud-server-racks-door-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-wols.jpg
+- name: oldcabin-store-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-smooth-ride.jpg
 ---
 The Importance Of Sustainable Whale Watching In Juneau.&nbsp;Natural Wine Is The Unpretentious Next Step In Orlando's Craft Beverage Scene.&nbsp;Itty Bitty Einsteins Learn Plants At Discovery Center.&nbsp;Greenlee Comunities Celebrate Independence Day.&nbsp;Train Horns To Be Silenced Across South Florida.&nbsp;Dealing With Future Heat Emergencies Will Require A toolbox.&nbsp;Iran Will Exceed Enrichment Levels Set By Nuclear Deal, Countrys Officials Say.&nbsp;Ruling Updates Open Meetings Law For Modern Technology.&nbsp;
